--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,8 +16,8 @@ spring:
 
   jpa:
     open-in-view: false
-    #    defer-datasource-initialization: true
-    hibernate.ddl-auto: update
+    defer-datasource-initialization: true
+    hibernate.ddl-auto: create
     show-sql: true
     properties:
       hibernate.format_sql: true
@@ -27,4 +27,4 @@ spring:
 
 spring:
   config.activate.on-profile: test
-  datasource.url: jdbc:h2:mem:testdb
+  datasource.url: jdbc:h2:mem:test
